Worked on add escrow module for basic,agrement,depoit and release conditions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,10 @@
       "@features/*": [
         "src/app/features/*"
       ],
-      "@shared/*": [
-        "src/app/shared/*"
-      ],
+      // ,
+      // "@shared/*": [
+      //   "src/app/shared/*"
+      // ],
       "@rnficonfig/*": [
         "src/app/rnfi-config/*"
       ],
