--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,18 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
-             "styles": [
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss",
-               "src/assets/scss/main.scss"
-              
+              "src/assets/scss/main.scss",
+              "node_modules/ngx-toastr/toastr.css",
+                "node_modules/@ng-select/ng-select/themes/default.theme.css"
+                
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -86,7 +91,10 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "src/styles.scss"
             ],
