Worked on sidebar service module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,9 @@
       // "@core/*": [
       //   "src/app/core/*"
       // ],
-      "@features/*": [
-        "src/app/features/*"
-      ],
+      // "@features/*": [
+      //   "src/app/features/*"
+      // ],
       // ,
       // "@shared/*": [
       //   "src/app/shared/*"
@@ -36,9 +36,9 @@
       "@rnficonfig/*": [
         "src/app/rnfi-config/*"
       ],
-      "@page/*": [
-        "src/app/pages/*"
-      ],
+      // "@page/*": [
+      //   "src/app/pages/*"
+      // ],
     }
   },
   "angularCompilerOptions": {
