--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "^19.1.0",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@angular/ssr": "^19.1.0",
     "@ciphersquare/dynamic-table": "^0.0.91",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ng-select/ng-select": "^14.9.0",
@@ -38,6 +40,7 @@
     "ngx-toastr": "^19.0.0",
     "pusher-js": "^8.4.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
